Fix memory leak and process orphaning in Astor